fix(reporting): preserve exact durable report evidence